# cmake-vs-template

./: CMakeLists.txt  README.md
src/hello123/: CMakeLists.txt
src/test123/: CMakeLists.txt  abc.cpp  abc.h
